--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal">
 
-    <Spinner android:id="@+id/Spinner01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <Spinner
+        android:id="@+id/planets_spinner"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".40"
+        android:layout_marginEnd="5sp"
+        android:paddingStart="5sp"
+        android:paddingEnd="5sp" />
 
     <EditText
-        android:id="@+id/etname"
-        android:layout_width="wrap_content"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:minWidth="100dip" />
+        android:layout_weight=".60"
+        android:layout_marginEnd="5sp"
+        android:paddingStart="5sp"
+        android:paddingEnd="5sp" />
+
 </LinearLayout>
