--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -34,6 +34,7 @@
         android:textSize="23sp" />
 
     <Button
+        android:id="@+id/button_detail_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
