--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -6,6 +6,12 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/detail_item_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp" />
+
+    <TextView
         android:id="@+id/detail_item_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
